--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
    
   .sidebar a.active {
     background-color: #04AA6D;
+    /* background-color:blueviolet; */
     color: white;
   }
   
